GNOME Bugzilla – Bug 671362
Fixes for GtkRadioMenuItem
Last modified: 2015-05-21 04:20:24 UTC
Mostly related to handling NULL arguments, plus a convenience function to match up with the rest of the GtkRadio* classes.
Created attachment 208998 [details] [review] radio-menu-item: Handle a !NULL group If we create a RadioMenuItem without a group, and then set a group, the menu item will still be set as active, which means an inconsistently drawn radio menu item - as the RadioMenuItem will set the active flag on itself, but then it won't reset it when it gets a new group.
Created attachment 208999 [details] [review] radio-menu-item: Allow arguments to be NULL Some arguments, like the group and the label of a RadioMenuItem, can be NULL: the RadioMenuItem has all the code to deal with them. The argument validation is too strict, though, for instance doing: return_if_fail (IS_RADIO_MENU_ITEM (foo)) if (foo != NULL) set_foo (foo) Which is obviously incorrect. This commit also modifies the annotations of the API, to ensure that language bindings do the right thing.
Created attachment 209000 [details] [review] radio-menu-item: Add join_group() The other Radio* widgets have this convenience method that removes the memory management of the opaque GSList used to handle the group from the API usable from language bindings (especially the ones not based on introspection). This commit adds gtk_radio_menu_item_join_group().
So who could review GtkRadio* patches in the GTK+ team?
Review of attachment 208998 [details] [review]: lets do this at the beginning of the next cycle, just to avoid the risk of fallout.
Review of attachment 208999 [details] [review]: lets do this at the beginning of the next cycle, just to avoid the risk of fallout.
Review of attachment 209000 [details] [review]: lets do this at the beginning of the next cycle, just to avoid the risk of fallout.
*** Bug 679563 has been marked as a duplicate of this bug. ***
Attachment 208998 [details] pushed as 955aed9 - radio-menu-item: Handle a !NULL group Attachment 208999 [details] pushed as ad05d84 - radio-menu-item: Allow arguments to be NULL Attachment 209000 [details] pushed as 5c5464a - radio-menu-item: Add join_group()